--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Hubrisy.github.io/shop",
+  "homepage": "http://Hubrisy.github.io/web-shop",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
@@ -12,8 +12,10 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
