--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Hubrisy.github.io/web-shop",
+  "homepage": "http://Hubrisy.github.io/shop",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
